--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,11 @@ twitter_username: jordipradel
 # github_username:  jekyll
 
 # Build settings
-theme: tale
 plugins:
   - jekyll-feed
-
+  - jekyll-paginate
+  - jekyll-remote-theme
+  
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
@@ -52,5 +53,6 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 
+remote_theme: chesterhow/tale
 permalink: /:year-:month-:day/:title
 paginate: 5
