--- a/_config.yml
+++ b/_config.yml
@@ -54,5 +54,5 @@ plugins:
 #   - vendor/ruby/
 
 remote_theme: chesterhow/tale
-permalink: /:year-:month-:day/:title
+permalink: articles/:year-:month-:day-:title
 paginate: 5
